# e-Comet

./: .gitignore
1/1/: .env.example  README.md  main.py  requirements.txt
1/1/db_version_app/: app.py  db.py  settings.py  views.py
1/1/tests/: conftest.py  test_home.py
1/2/: README.md  pyproject.toml  requirements.txt
1/2/db_version_app/: __main__.py
1/2/db_version_app/db/: dependencies.py  pool.py
1/2/db_version_app/web/: app.py
1/2/db_version_app/web/api/: services.py  views.py
1/2/tests/: conftest.py  test_home.py
2/: README.md  pyproject.toml  requirements.txt
2/github_repos_scrapper/: __init__.py  exceptions.py  schemas.py  scrapper.py  utils.py
2/tests/: test_scrapper.py
3/: .env.example  README.md  pyproject.toml  requirements.txt
3/github_clickhouse_saver/: __init__.py  __main__.py  logger.py  repositories.py  saver.py  schemas.py  settings.py
3/github_clickhouse_saver/db/: client.py  init.py  repository.py
3/github_clickhouse_saver/db/migrations/: 0001_create_repositories.sql  0002_create_repositories_authors_commits.sql  0003_create_repositories_positions.sql
3/tests/: conftest.py  test_saver.py
4/: README.md  solution.sql
